--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,29 @@
+body{
+    padding: 12px 2px;
+    background-color: #DCDCDC;
+}
 .container{
     background-color: #eee;
+    padding: 10px;
+    border-radius: 5px;
 }
 .title{
     text-align: center;
 }
+.image{
+    text-align: center;
+    background-color: #fff;
+    padding: 5px;
+
+}
+#image{
+    width: auto;
+    height: auto;
+}
+
+@media screen and (max-width: 900px) {
+    #image{
+        position: relative;
+       width: 99%;
+    }
+  }
