--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body{
     padding: 12px 2px;
-    background-color: #DCDCDC;
+    background-color: #FFFF;
 }
 .container{
     background-color: #eee;
@@ -24,6 +24,35 @@ body{
 @media screen and (max-width: 900px) {
     #image{
         position: relative;
-       width: 99%;
+       width: 98%;
     }
   }
+
+#headline{
+    text-align: center; 
+
+}
+.ul-class{
+    width: 50%;
+    position: relative;
+    margin: 30px auto;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
+    font-size: 16px;
+}
+
+li
+{
+margin-bottom: 20px;  
+color: #333;
+}
+
+@media screen and (max-width: 900px) {
+    .ul-class{
+        position: relative;
+        width: 95%;
+    }
+  }
+  blockquote
+{
+    font-style: italic;
+}
